import Marcador from "./marcador";

export default class Categoria extends Marcador{
    constructor(nombre: string){
        super(nombre);
    }
}