enum Prioridad{
    Baja,
    Media,
    Alta
}